<resources>
    <string name="app_name">PMS</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="app_login">Login</string>
    <string name="app_register">Register</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_confirmpassword">Confirm Password</string>
    <string name="action_logout">Logout</string>
    <string name="action_exit">Exit</string>
    <string name="action_profile">Account Settings</string>
    <string name="hint_fullname">Fullname</string>
    <string name="hint_newpassword">New Password</string>
    <string name="app_profile">My Account</string>
    <string name="app_change_password">Change Password</string>
    <string name="app_add_patient">Add Patient</string>
    <string name="hint_casenumber">Case Number</string>
    <string name="hint_sex">Sex</string>
    <string name="hint_physician">Physician</string>
    <string name="hint_room">Room</string>
    <string name="hint_dateadmitted">Date Admitted</string>
    <string name="hint_timeadmitted">Time Admitted</string>
    <string name="action_addpatient">Add Patient</string>
    <string name="app_patient_list">List of Patient</string>
    <string name="action_patientlist">Patient List</string>
    <string name="app_user_log">User Log</string>
    <string name="action_userlog">User Logs</string>
    <string name="items_delete">Delete</string>
    <string name="items_addtomonitor">Add to Monitoring</string>
    <string name="items_cancel">Cancel</string>
    <string name="app_patient_monitor">Monitoring of Patient</string>
    <string name="items_removefrommonitor">Remove from Monitoring</string>
    <string name="action_removepatient">Remove from Monitoring</string>
    <string name="action_patientmonitor">Patient Monitoring</string>
    <string name="action_clear">Clear</string>
    <string name="app_forgotpassword">Forgot Password</string>
    <string name="app_editpatient">Edit Patient</string>
    <string name="items_editpatient">Edit</string>
    <string name="hint_medicine1">Medicine</string>
    <string name="hint_time1">Time 1</string>
    <string name="hint_time2">Time 2</string>
    <string name="hint_time3">Time 3</string>
    <string name="app_editmedicine">Medicine</string>
    <string name="action_editmedicine">Medicine</string>
    <string name="items_editmedicine">Medicine</string>
    <string-array name="roles_array">
        <item>Nurse</item>
        <item>Head Nurse</item>
        <item>Doctor</item>
    </string-array>
    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
