<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jessi.pms.Home">
    <item
        android:id="@+id/action_patientmonitor"
        android:orderInCategory="40"
        android:title="@string/action_patientmonitor"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_addpatient"
        android:orderInCategory="50"
        android:title="@string/action_addpatient"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_patientlist"
        android:orderInCategory="70"
        android:title="@string/action_patientlist"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_userlog"
        android:orderInCategory="80"
        android:title="@string/action_userlog"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="200"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
