<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jessi.pms.Profile"
    tools:showIn="@layout/activity_profile">

    <TextView
        android:text="Role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:id="@+id/role_textview" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/role_textview"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/hint_fullname"
            android:id="@+id/fullname_edittext" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_fullname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/hint_newpassword"
            android:id="@+id/newpassword_edittext" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_newpassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/hint_confirmpassword"
            android:id="@+id/confirmpassword_edittext" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_confirmpassword">

        <Button
            android:text="Save"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_confirmpassword"
            android:layout_alignParentStart="true"
            android:id="@+id/save_button" />

        <Button
            android:text="Cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_confirmpassword"
            android:layout_alignParentEnd="true"
            android:id="@+id/cancel_button" />

    </LinearLayout>

</RelativeLayout>
