<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_edit_patient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jessi.pms.EditPatient"
    tools:showIn="@layout/activity_edit_patient">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true">

        <EditText
            android:text="Foo Bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/hint_fullname"
            android:id="@+id/fullname_edittext" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_physician"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_fullname"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true">

        <EditText
            android:text="Ms. Physician"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/hint_physician"
            android:id="@+id/physician_edittext" />

    </android.support.design.widget.TextInputLayout>

    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:id="@+id/input_layout_date"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/input_layout_physician"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentLeft="true">-->

        <!--<EditText-->
            <!--android:text="1-1-2016"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="textPersonName"-->
            <!--android:ems="10"-->
            <!--android:hint="@string/hint_dateadmitted"-->
            <!--android:id="@+id/dateadmitted_edittext" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:id="@+id/input_layout_time"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/input_layout_date"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentLeft="true">-->

        <!--<EditText-->
            <!--android:text="12:00"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="textPersonName"-->
            <!--android:ems="10"-->
            <!--android:hint="@string/hint_timeadmitted"-->
            <!--android:id="@+id/timeadmitted_edittext" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_physician"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true">

        <EditText
            android:text="A1000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/hint_room"
            android:id="@+id/room_edittext" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_below="@id/input_layout_room"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="Save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/save_button" />

        <Button
            android:text="Cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/cancel_button" />
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/loading_progressbar" />


</RelativeLayout>
