<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_edit_medicine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jessi.pms.EditMedicine"
    tools:showIn="@layout/activity_edit_medicine">

    <LinearLayout
        android:id="@+id/layout_med1"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_drug1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/med1_checkbox" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_drug1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <EditText
                android:text="Medicine 1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/hint_medicine1"
                android:id="@+id/drug1_edittext" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_time1"
        android:gravity="center_vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:layout_marginLeft="48dp"
        android:layout_below="@id/layout_med1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_time1a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <EditText
                android:text="Time 1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/hint_time1"
                android:id="@+id/time1a_edittext" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_time1b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <EditText
                android:text="Time 2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/hint_time2"
                android:id="@+id/time1b_edittext" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_time1c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <EditText
                android:text="Time 3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/hint_time3"
                android:id="@+id/time1c_edittext" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="Add Timeslot"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/med1_addtime" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_med2"
        android:gravity="center_vertical"
        android:layout_below="@id/layout_time1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_drug1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/med2_checkbox" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_drug2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <EditText
                android:text="Medicine 2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/hint_medicine1"
                android:id="@+id/drug2_edittext" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_time2"
        android:gravity="center_vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:layout_marginLeft="48dp"
        android:layout_below="@id/layout_med2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_time2a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <EditText
                android:text="Time 1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/hint_time1"
                android:id="@+id/time2a_edittext" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_time2b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <EditText
                android:text="Time 2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/hint_time2"
                android:id="@+id/time2b_edittext" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_time2c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <EditText
                android:text="Time 3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/hint_time3"
                android:id="@+id/time2c_edittext" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="Add Timeslot"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/med2_addtime" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@+id/layout_time2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="Save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/save_button"
            android:layout_weight="1" />

        <Button
            android:text="Cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:layout_weight="1" />
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/loading_progressbar" />
</RelativeLayout>
